<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|fill">

    <LinearLayout
        android:id="@+id/LinearLayout_Main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="left|center_vertical|fill_vertical"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:id="@+id/LinearLayout_TextOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@android:color/darker_gray">

            <TableLayout
                android:id="@+id/Table_Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TableRow>

            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="right|center_vertical|fill_vertical"
        android:orientation="vertical">

        <com.stein.tyler.testapplication.views.GameView
            android:id="@+id/GameView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical|fill_vertical"
            android:layout_weight="0.5" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:background="@android:color/darker_gray">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33">

                <Button
                    android:id="@+id/btn_northwest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/nw"
                    tools:clickable="true" />

                <Button
                    android:id="@+id/btn_north"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/n"
                    tools:clickable="true" />

                <Button
                    android:id="@+id/btn_northeast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/ne"
                    tools:clickable="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33">

                <Button
                    android:id="@+id/btn_west"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/w"
                    tools:clickable="true" />

                <Button
                    android:id="@+id/btn_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="here"
                    tools:clickable="true" />

                <Button
                    android:id="@+id/btn_east"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/e"
                    tools:clickable="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33">

                <Button
                    android:id="@+id/btn_southwest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/sw"
                    tools:clickable="true" />

                <Button
                    android:id="@+id/btn_south"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/s"
                    tools:clickable="true" />

                <Button
                    android:id="@+id/btn_southeast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:onClick="onClick"
                    android:text="@string/se"
                    tools:clickable="true" />
            </TableRow>
        </TableLayout>


    </LinearLayout>

</LinearLayout>
